<?xml version="1.0"?>
<package format="2">
  <name>fuzzy_psr</name>
  <version>0.0.0</version>
  <description>The fuzzy-psr package</description>

  <maintainer email="hkan@todo.todo">hkan</maintainer>


  <license>TODO</license>


  <depend>roscpp</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <buildtool_depend>catkin</buildtool_depend>


  <export>

  </export>
</package>
